<?xml version="1.0"?>
<package format="2">
  <name>barcode_docker</name>
  <version>0.1.0</version>
  <description>The barcode_docker package, based on RComponent structure. Node that allows to dock the robot using two barcode scanners.</description>

  <maintainer email="jgomez@robotnik.es">Jose Gomez</maintainer>

  <author email="jgomez@robotnik.es">Jose Gomez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
